講師紹介文追加

--- a/admission.html
+++ b/admission.html
@@ -78,7 +78,7 @@
                 <div class="step-number">02</div>
                 <div class="step-content">
                   <h3>体験レッスン当日</h3>
-                  <p>ご予約日時に道場へお越しください。動きやすい服装とタオル、飲み物をご持参ください。バチはお貸しします。</p>
+                  <p>ご予約日時に練習場へお越しください。動きやすい服装とタオル、飲み物をご持参ください。バチはお貸しします。</p>
                 </div>
               </div>
               <div class="step-connector"></div>
