--- a/instructors.html
+++ b/instructors.html
@@ -73,7 +73,10 @@
                 <h2>指導者 <span class="name">栗原 清美</span></h2>
                 <p class="instructor-role">KIYOMI KURIHARA</p>
                 <p class="instructor-bio">
-                  紹介文
+                  和太鼓歴10年。2007年に「武天」を設立し、
+                  [国立劇場での公演 / 海外ツアー / 〇〇コンクール優勝] など国内外で数多くの舞台を経験してきました。
+                  長年の演奏活動で培った技術と経験を基に、基礎から応用まで妥協のない指導を行います。
+                  「伝統を守りながら新たな響きを創造する」を理念に、次世代の和太鼓奏者の育成に情熱を注いでいます。
                 </p>
               </div>
             </div>
@@ -120,7 +123,7 @@
                 </div>
                 <div class="card-content">
                   <h3>川久保 諒</h3>
-                  <p class="instructor-sub">RYO KAWAMOTO</p>
+                  <p class="instructor-sub">RYO KAWAKUBO</p>
                   <p>紹介文</p>
                 </div>
               </div>
