デモ公開準備

--- a/admission.html
+++ b/admission.html
@@ -142,10 +142,10 @@
 
       <footer class="site-footer">
         <div class="social-links">
-          <a href="#" class="social-icon" aria-label="Instagram">
+          <a href="https://www.instagram.com/wadaiko_buten/" class="social-icon" aria-label="Instagram">
             <img src="public/Instagram_Glyph_Gradient.png" alt="Instagram">
           </a>
-          <a href="#" class="social-icon" aria-label="Facebook">
+          <a href="https://www.facebook.com/BUTEN2008/" class="social-icon" aria-label="Facebook">
             <img src="public/Facebook_Logo_Primary.png" alt="Facebook">
           </a>
           <!-- YouTube placeholder
