--- a/contact.html
+++ b/contact.html
@@ -64,6 +64,10 @@
         <section class="section-contact-form">
           <div class="container">
             <p class="contact-intro">体験レッスンのお申し込み、演奏のご依頼、その他ご質問など、<br class="desktop-only">お気軽にお問い合わせください。</p>
+            <br>
+            <p style="color : #c00; font-size : 0.9rem; text-align: center;">
+              このページは作成中のサイトです。実際の応募・送信は行われません。
+            </p>
 
             <form class="contact-form" data-api-endpoint="YOUR_API_GATEWAY_URL_HERE">
               <div class="form-group">
@@ -109,10 +113,10 @@
 
       <footer class="site-footer">
         <div class="social-links">
-          <a href="#" class="social-icon" aria-label="Instagram">
+          <a href="https://www.instagram.com/wadaiko_buten/" class="social-icon" aria-label="Instagram">
             <img src="public/Instagram_Glyph_Gradient.png" alt="Instagram">
           </a>
-          <a href="#" class="social-icon" aria-label="Facebook">
+          <a href="https://www.facebook.com/BUTEN2008/" class="social-icon" aria-label="Facebook">
             <img src="public/Facebook_Logo_Primary.png" alt="Facebook">
           </a>
           <!-- YouTube placeholder
