--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0" />-->
+    <meta name="robots" content="noindex, nofollow">
     <title>和太鼓 武天 -BUTEN-</title>
     <meta name="description" content="和太鼓 武天の公式サイトです。あきる野市、青梅市を中心に活動しています" />
     <!-- Google Fonts -->
@@ -79,9 +80,10 @@
           <div class="container">
             <h2 class="section-title">和太鼓 武天</h2>
             <p class="concept-text">
-              和太鼓 武天（わだいこ ぶてん）は、東京都あきる野市を拠点に活動する和太鼓グループです。<br >
-              2007年の結成以来、地域の祭りやイベントでの演奏を中心に、和太鼓の魅力を広める活動を行っています。<br>
-              初心者から経験者まで幅広い年齢層が参加しており、和太鼓を通じて地域の絆を深めています。
+              和太鼓 武天（わだいこ ぶてん）は、東京都あきる野市を拠点に活動する和太鼓グループです。<br>
+              会員約50名、小学生～60代で構成。様々なイベントに合わせて演目、人数、構成を変え演奏します。<br>
+              持ち曲は全て独自で作曲、振り付け、曲の変化を楽しむ創作和太鼓です。<br>
+              見てくださる方々の心に響く音を目指し、地域との繋がりを大切に活動の場を広げています。
             </p>
           </div>
         </section>
@@ -171,10 +173,10 @@
 
       <footer class="site-footer">
         <div class="social-links">
-          <a href="#" class="social-icon" aria-label="Instagram">
+          <a href="https://www.instagram.com/wadaiko_buten/" class="social-icon" aria-label="Instagram">
             <img src="public/Instagram_Glyph_Gradient.png" alt="Instagram">
           </a>
-          <a href="#" class="social-icon" aria-label="Facebook">
+          <a href="https://www.facebook.com/BUTEN2008/" class="social-icon" aria-label="Facebook">
             <img src="public/Facebook_Logo_Primary.png" alt="Facebook">
           </a>
           <!-- YouTube placeholder
