--- a/instructors.html
+++ b/instructors.html
@@ -139,7 +139,7 @@
               <p>体験レッスンのお申し込み、ご質問はこちらからお気軽にどうぞ。</p>
 
               <div class="form-placeholder">
-                <a href="#" class="cta-button" style="background-color: white; color: var(--color-accent);">メールフォームへ</a>
+                <a href="contact.html" class="cta-button" style="background-color: white; color: var(--color-accent);">メールフォームへ</a>
               </div>
             </div>
           </div>
@@ -148,10 +148,10 @@
 
       <footer class="site-footer">
         <div class="social-links">
-          <a href="#" class="social-icon" aria-label="Instagram">
+          <a href="https://www.instagram.com/wadaiko_buten/" class="social-icon" aria-label="Instagram">
             <img src="public/Instagram_Glyph_Gradient.png" alt="Instagram">
           </a>
-          <a href="#" class="social-icon" aria-label="Facebook">
+          <a href="https://www.facebook.com/BUTEN2008/" class="social-icon" aria-label="Facebook">
             <img src="public/Facebook_Logo_Primary.png" alt="Facebook">
           </a>
           <!-- YouTube placeholder
