フォーム修正

--- a/admission.html
+++ b/admission.html
@@ -157,7 +157,7 @@
         <p>&copy; 2025 和太鼓 武天 -BUTEN-</p>
       </footer>
     </div>
-    <script type="module" src="./main.js"></script>
+    <script src="./main.js"></script>
   </body>
 
 </html>
