--- a/class.html
+++ b/class.html
@@ -169,7 +169,7 @@
         <p>&copy; 2025 和太鼓 武天 -BUTEN-</p>
       </footer>
     </div>
-    <script type="module" src="./main.js"></script>
+    <script src="./main.js"></script>
   </body>
 
 </html>
