--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>お問い合わせ | 和太鼓 武天 -BUTEN-</title>
     <meta name="description" content="和太鼓「武天」へのお問い合わせ・体験レッスンのお申し込み。お気軽にご連絡ください。">
@@ -69,7 +69,7 @@
               このページは作成中のサイトです。実際の応募・送信は行われません。
             </p>
 
-            <form class="contact-form" data-api-endpoint="YOUR_API_GATEWAY_URL_HERE">
+            <form id="contact-form" class="contact-form" data-api-endpoint="YOUR_API_GATEWAY_URL_HERE">
               <div class="form-group">
                 <label for="name">お名前 <span class="required">必須</span></label>
                 <input type="text" id="name" name="name" required placeholder="例：山田 太郎">
@@ -128,7 +128,7 @@
         <p>&copy; 2025 和太鼓 武天 -BUTEN-</p>
       </footer>
     </div>
-    <script type="module" src="./main.js"></script>
+    <script src="./main.js"></script>
   </body>
 
 </html>
