レスポンシブ修正

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0" />-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex, nofollow">
     <title>和太鼓 武天 -BUTEN-</title>
     <meta name="description" content="和太鼓 武天の公式サイトです。あきる野市、青梅市を中心に活動しています" />
