--- a/access.html
+++ b/access.html
@@ -45,9 +45,11 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="class.html">クラス紹介</a></li>
+            <li><a href="workshop.html">ワークショップ</a></li>
             <li><a href="instructors.html">講師紹介</a></li>
             <li><a href="admission.html">入会案内</a></li>
             <li><a href="schedule.html">公演予定</a></li>
+            <li><a href="performances.html">公演実績</a></li>
             <li><a href="access.html" class="active">アクセス</a></li>
             <li><a href="contact.html">お問い合わせ</a></li>
           </ul>
