--- a/class.html
+++ b/class.html
@@ -72,11 +72,11 @@
                 <img src="dist/kids_class.png" alt="キッズクラス" loading="lazy">
               </div>
               <div class="detail-content">
-                <h2>福来竜</h2>
+                <h2>万九龍</h2>
                 <span class="tag">対象：小学生〜中学生</span>
                 <p class="description">
                   リズム感や体力を養うだけでなく、大きな声を出し、仲間と音を合わせることで協調性や礼儀作法も身につきます。
-                  ゲーム感覚で楽しめる練習から、本格的な曲打ちまで、年齢とレベルに合わせて指導します。
+                  ゲーム感覚で楽しめる練習から、本格的な曲打ちまで、年齢とレベルに合わせて指導します。(サンプル文)
                 </p>
                 <div class="class-info">
                   <dl>
@@ -96,11 +96,11 @@
               </div>
               <div class="detail-content">
                 <h2>舞華蝶</h2>
-                <span class="tag">対象：高校生以上（初心者歓迎）</span>
+                <span class="tag">対象：</span>
                 <p class="description">
                   和太鼓の基礎から応用までを学びます。
                   全身を使って叩く爽快感はストレス発散にも最適です。
-                  年に数回の地域のイベントや発表会に向けた曲の練習も行います。
+                  年に数回の地域のイベントや発表会に向けた曲の練習も行います。(サンプル文)
                 </p>
                 <div class="class-info">
                   <dl>
@@ -120,11 +120,11 @@
               </div>
               <div class="detail-content">
                 <h2>十夜叉</h2>
-                <span class="tag">対象：60歳以上</span>
+                <span class="tag">対象：</span>
                 <p class="description">
                   無理のない動きで、楽しく体を動かすことを目的としたクラスです。
                   脳トレの要素も取り入れたリズム遊びや、ストレッチを中心に行います。
-                  同世代の仲間との交流の場としても好評です。
+                  同世代の仲間との交流の場としても好評です。(サンプル文)
                 </p>
                 <div class="class-info">
                   <dl>
@@ -144,7 +144,7 @@
           <div class="container">
             <h2 class="section-title">お問い合わせ</h2>
             <div class="contact-content">
-              <p>体験レッスンのお申し込み、ご質問はこちらからお気軽にどうぞ。</p>
+              <p>出演のご依頼、体験レッスンのお申し込み、ご質問はこちらからお気軽にどうぞ。</p>
 
               <div class="form-placeholder">
                 <a href="contact.html" class="cta-button" style="background-color: white; color: var(--color-accent);">メールフォームへ</a>
