--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <h2 class="section-title">和太鼓 武天</h2>
             <p class="concept-text">
               和太鼓 武天（わだいこ ぶてん）は、東京都あきる野市を拠点に活動する和太鼓グループです。<br>
-              会員約50名、小学生～60代で構成。様々なイベントに合わせて演目、人数、構成を変え演奏します。<br>
+              会員約70名、小学1年生～70代で構成。様々なイベントに合わせて演目、人数、構成を変え演奏します。<br>
               持ち曲は全て独自で作曲、振り付け、曲の変化を楽しむ創作和太鼓です。<br>
               見てくださる方々の心に響く音を目指し、地域との繋がりを大切に活動の場を広げています。
             </p>
@@ -100,7 +100,7 @@
                   <img src="dist/kids_class.png" alt="子供たちが笑顔で太鼓を叩いている様子" loading="lazy">
                 </div>
                 <div class="card-content">
-                  <h3><a href="class.html#kids">福来竜</a></h3>
+                  <h3><a href="class.html#kids">万九龍</a></h3>
                   <p>元気いっぱいかわいい子供たちが活躍する親子チーム<br>明るく活発な兄弟・親子で楽しむ太鼓で幸せになろう</p>
                 </div>
               </div>
@@ -119,7 +119,8 @@
                 </div>
                 <div class="card-content">
                   <h3><a href="class.html#senior">十夜叉</a></h3>
-                  <p>武天を代表する若者10人がコンセプトエネルギッシュ、かつアグレッシブな打ち込みで魅了<br></p>
+                  <p>武天を代表する若者10人がコンセプト<br>
+                    エネルギッシュ、アグレッシブな打ち込みで魅了<br></p>
                 </div>
               </div>
             </div>
@@ -131,24 +132,24 @@
             <h2 class="section-title">公演予定</h2>
             <div class="schedule-list">
               <div class="schedule-item">
-                <div class="schedule-date">2025.4.5</div>
+                <div class="schedule-date">2026.04.05</div>
                 <div class="schedule-content">
                   <h3><a href="schedule.html">武天 発表会</a></h3>
-                  <p>場所：ふれあいホール / 時間：15:00〜</p>
+                  <p>場所：ふれあいホール / 時間：14:00〜 17:00〜</p>
                 </div>
               </div>
               <div class="schedule-item">
-                <div class="schedule-date">2026.01.01</div>
+                <div class="schedule-date">2026.05.23</div>
                 <div class="schedule-content">
-                  <h3><a href="schedule.html">新春奉納演奏</a></h3>
-                  <p>場所：地元神社境内 / 時間：10:00〜</p>
+                  <h3><a href="schedule.html">野辺</a></h3>
+                  <p>場所：キララホール / 時間：14:00〜</p>
                 </div>
               </div>
               <div class="schedule-item">
-                <div class="schedule-date">2026.01.31</div>
+                <div class="schedule-date">2026.12.01</div>
                 <div class="schedule-content">
-                  <h3><a href="schedule.html">武天 発表会</a></h3>
-                  <p>場所：キララホール / 時間：13:00〜</p>
+                  <h3><a href="schedule.html">武天 kids 成果発表会</a></h3>
+                  <p>場所：フレア五日市 / 時間：未定</p>
                 </div>
               </div>
             </div>
@@ -162,7 +163,7 @@
             <h2 class="section-title">お問い合わせ</h2>
             <!-- Contact info -->
             <div class="contact-content">
-              <p>体験レッスンのお申し込み、ご質問はこちらからお気軽にどうぞ。</p>
+              <p>出演のご依頼、体験レッスンのお申し込み、ご質問はこちらからお気軽にどうぞ。</p>
 
               <div class="form-placeholder">
                 <a href="contact.html" class="cta-button"
