--- a/instructors.html
+++ b/instructors.html
@@ -75,10 +75,11 @@
                 <h2>指導者 <span class="name">栗原 清美</span></h2>
                 <p class="instructor-role">KIYOMI KURIHARA</p>
                 <p class="instructor-bio">
-                  和太鼓歴10年。2007年に「武天」を設立し、
-                  [国立劇場での公演 / 海外ツアー / 〇〇コンクール優勝] など国内外で数多くの舞台を経験してきました。
-                  長年の演奏活動で培った技術と経験を基に、基礎から応用まで妥協のない指導を行います。
-                  「伝統を守りながら新たな響きを創造する」を理念に、次世代の和太鼓奏者の育成に情熱を注いでいます。
+                  小学5年生で和太鼓と出会い、18歳でプロの世界へ。以来40年以上にわたり、国内外の舞台で演奏、和太鼓の魅力を追い続け可能性を追求してきました。<br>
+                  フランス・ドイツ公演や桜月流美剣道「源氏物語」への出演など、第一線で培った経験を活かし、現在は「和太鼓 武天(ぶてん)」を主宰。文化・地域への貢献と共に、後進の育成に力を注いでいます。<br>
+                  指導者として30年以上、たくさんの生徒さんと向き合ってきました。<br>
+                  指導において大切にしているのは「リズム・メロディ・ハーモニー」の調和、そして何より「仲間や家族と奏でる喜び」です。<br>
+                  子育てと演奏活動を両立してきた自身の経験から、太鼓を通じて子供たちの豊かな心の育みに寄り添い、世代を超えた絆や仲間と共に一つの音楽を作り上げる楽しさ、そして一人ひとりの個性と音色を引き出す指導を心がけています。
                 </p>
               </div>
             </div>
@@ -138,7 +139,7 @@
           <div class="container">
             <h2 class="section-title">お問い合わせ</h2>
             <div class="contact-content">
-              <p>体験レッスンのお申し込み、ご質問はこちらからお気軽にどうぞ。</p>
+              <p>出演のご依頼、体験レッスンのお申し込み、ご質問はこちらからお気軽にどうぞ。</p>
 
               <div class="form-placeholder">
                 <a href="contact.html" class="cta-button" style="background-color: white; color: var(--color-accent);">メールフォームへ</a>
