--- a/performances.html
+++ b/performances.html
@@ -66,7 +66,7 @@
         <section class="section-intro">
           <div class="container">
             <p class="intro-text">
-              和太鼓 武天は2008年の結成以来、地域のお祭りや文化イベント、企業イベントなど、<br>
+              和太鼓 武天は2007年の結成以来、地域のお祭りや文化イベント、企業イベントなど、<br>
               多岐にわたる舞台で演奏を行ってきました。<br>
               これまでの活動の一部をご紹介いたします。
             </p>
@@ -238,7 +238,7 @@
               <h2 class="year-title">これまでの主な活動</h2>
               <div class="legacy-list">
                 <div class="legacy-item">
-                  <span class="legacy-year">2008年〜</span>
+                  <span class="legacy-year">2007年〜</span>
                   <p>和太鼓 武天 結成。あきる野市を中心に活動開始。</p>
                 </div>
                 <div class="legacy-item">
@@ -272,11 +272,11 @@
             <h2 class="section-title">活動の歩み</h2>
             <div class="stats-grid">
               <div class="stat-card">
-                <span class="stat-number">2008</span>
+                <span class="stat-number">2007</span>
                 <span class="stat-label">結成年</span>
               </div>
               <div class="stat-card">
-                <span class="stat-number">50+</span>
+                <span class="stat-number">70+</span>
                 <span class="stat-label">会員数</span>
               </div>
               <div class="stat-card">
@@ -284,7 +284,7 @@
                 <span class="stat-label">公演回数</span>
               </div>
               <div class="stat-card">
-                <span class="stat-number">17</span>
+                <span class="stat-number">19</span>
                 <span class="stat-label">年の歴史</span>
               </div>
             </div>
@@ -295,7 +295,7 @@
           <div class="container">
             <h2 class="section-title">出演依頼・お問い合わせ</h2>
             <div class="contact-content">
-              <p>イベント出演のご依頼、体験レッスンのお申し込みなど、<br>お気軽にお問い合わせください。</p>
+              <p>出演のご依頼、体験レッスンのお申し込みなど、<br>お気軽にお問い合わせください。</p>
 
               <div class="form-placeholder">
                 <a href="contact.html" class="cta-button" style="background-color: white; color: var(--color-accent);">お問い合わせフォームへ</a>
