--- a/workshop.html
+++ b/workshop.html
@@ -67,12 +67,19 @@
           <div class="container">
             <h2 class="section-catch">一回完結型！<br>気軽に楽しむ和太鼓体験</h2>
             <p class="intro-text">
-              「和太鼓に興味があるけれど、定期的に通うのは難しい」<br>
-              「まずは一度、思いっきり太鼓を叩いてみたい」<br>
-              そんな方のための、一回完結型のワークショップです。<br>
+              ちょっと面白い企画<br>
+              太鼓をやってみたい！<br>
+              でも仕事事情や都合上、練習には毎週続けて通うのは出来ず、<br>入会までは難しくて...という方向けです♪<br>
               <br>
-              基礎から丁寧に指導しますので、初めての方でも安心。<br>
-              90分のレッスンで、簡単な曲が叩けるようになります！
+              いつの日か1回で完結型の太鼓教室みたいなのが、あれば是非行きたい！というご意見を頂戴しており、それがついに実現することになりました！<br>
+              参加者は全員初心者<br>
+              なので安心です。<br>
+              もしご興味があったらやってみませんか？<br>
+              <br>
+              年齢問わずです<br>
+              ご友人、ご家族、などなどご一緒にどうぞ！
+              <br>
+              
             </p>
           </div>
         </section>
@@ -101,7 +108,7 @@
                 <dd>不定期開催（下記のお知らせをご確認ください）</dd>
 
                 <dt>場所</dt>
-                <dd>あきる野市周辺の体育館またはホール<br>※開催回により異なります</dd>
+                <dd>あたご苑</dd>
 
                 <dt>参加費</dt>
                 <dd>2,000円 (税込) / 1回</dd>
