--- a/access.html
+++ b/access.html
@@ -99,7 +99,7 @@
           <div class="container">
             <h2 class="section-title">お問い合わせ</h2>
             <div class="contact-content">
-              <p>体験レッスンのお申し込み、ご質問はこちらからお気軽にどうぞ。</p>
+              <p>出演のご依頼、体験レッスンのお申し込み、ご質問はこちらからお気軽にどうぞ。</p>
 
               <div class="form-placeholder">
                 <a href="#" class="cta-button" style="background-color: white; color: var(--color-accent);">メールフォームへ</a>
