--- a/admission.html
+++ b/admission.html
@@ -109,7 +109,7 @@
               <h2 class="section-title">体験レッスンについて</h2>
               <dl class="trial-details">
                 <dt>体験料</dt>
-                <dd class="price">500円 <span class="tax">(税込)</span> <br><span class="note"></span>
+                <dd class="price">1回 2000円 <br><span class="note"></span>
                 </dd>
 
                 <dt>開催日時</dt>
