--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
 
         <section class="section-contact-form">
           <div class="container">
-            <p class="contact-intro">体験レッスンのお申し込み、演奏のご依頼、その他ご質問など、<br class="desktop-only">お気軽にお問い合わせください。</p>
+            <p class="contact-intro">出演のご依頼、体験レッスンのお申し込み、その他ご質問など、<br class="desktop-only">お気軽にお問い合わせください。</p>
             <br>
             <p style="color : #c00; font-size : 0.9rem; text-align: center;">
               このページは作成中のサイトです。実際の応募・送信は行われません。
@@ -91,8 +91,8 @@
                 <label for="subject">件名 <span class="required">必須</span></label>
                 <select id="subject" name="subject" required>
                   <option value="">選択してください</option>
+                  <option value="performance">出演のご依頼</option>
                   <option value="trial">体験レッスンのお申し込み</option>
-                  <option value="performance">演奏のご依頼</option>
                   <option value="question">ご質問・その他</option>
                 </select>
               </div>
