--- a/class.html
+++ b/class.html
@@ -45,11 +45,11 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="class.html" class="active">クラス紹介</a></li>
-            <li><a href="workshop.html">ワークショップ</a></li>
             <li><a href="instructors.html">講師紹介</a></li>
             <li><a href="admission.html">入会案内</a></li>
             <li><a href="schedule.html">公演予定</a></li>
             <li><a href="performances.html">公演実績</a></li>
+            <li><a href="workshop.html">ワークショップ</a></li>
             <li><a href="access.html">アクセス</a></li>
             <li><a href="contact.html">お問い合わせ</a></li>
           </ul>
@@ -69,14 +69,13 @@
             <!-- Kids Class -->
             <div class="class-detail-card" id="kids">
               <div class="detail-image">
-                <img src="dist/kids_class.png" alt="キッズクラス" loading="lazy">
+                <img src="public/saturday.jpg" alt="キッズクラス" loading="lazy">
               </div>
               <div class="detail-content">
                 <h2>万九龍</h2>
                 <span class="tag">対象：小学生〜中学生</span>
                 <p class="description">
-                  リズム感や体力を養うだけでなく、大きな声を出し、仲間と音を合わせることで協調性や礼儀作法も身につきます。
-                  ゲーム感覚で楽しめる練習から、本格的な曲打ちまで、年齢とレベルに合わせて指導します。(サンプル文)
+                  「仲間や家族と奏でる喜び」を大切に、リズム・メロディ・ハーモニーを身体全体で感じるクラスです。明るく活発な子供たちの個性を引き出しながら、礼儀や協調性といった豊かな心も育みます。親子や兄弟で一緒に汗を流し、太鼓を通じて生まれる家族の絆を深めてみませんか？(サンプル文)
                 </p>
                 <div class="class-info">
                   <dl>
@@ -92,7 +91,7 @@
             <!-- General Class -->
             <div class="class-detail-card" id="general">
               <div class="detail-image">
-                <img src="dist/hero_bg.png" alt="一般クラス" loading="lazy">
+                <img src="public/maikatyou.jpg" alt="大人チーム" loading="lazy">
               </div>
               <div class="detail-content">
                 <h2>舞華蝶</h2>
@@ -114,9 +113,9 @@
             </div>
 
             <!-- Senior Class -->
-            <div class="class-detail-card" id="senior">
+            <div class="class-detail-card" id="junior">
               <div class="detail-image">
-                <img src="dist/senior_class.png" alt="シニア健康クラス" loading="lazy">
+                <img src="public/to-yasya.jpg" alt="若者チーム" loading="lazy">
               </div>
               <div class="detail-content">
                 <h2>十夜叉</h2>
