--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
           <ul>
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="class.html">クラス紹介</a></li>
-            <li><a href="workshop.html">ワークショップ</a></li>
             <li><a href="instructors.html">講師紹介</a></li>
             <li><a href="admission.html">入会案内</a></li>
             <li><a href="schedule.html">公演予定</a></li>
             <li><a href="performances.html">公演実績</a></li>
+            <li><a href="workshop.html">ワークショップ</a></li>
             <li><a href="access.html">アクセス</a></li>
             <li><a href="contact.html">お問い合わせ</a></li>
           </ul>
@@ -83,7 +83,8 @@
             <h2 class="section-title">和太鼓 武天</h2>
             <p class="concept-text">
               和太鼓 武天（わだいこ ぶてん）は、東京都あきる野市を拠点に活動する和太鼓グループです。<br>
-              会員約70名、小学1年生～70代で構成。様々なイベントに合わせて演目、人数、構成を変え演奏します。<br>
+              会員約70名、小学1年生～70代で構成され、親子チーム、大人チーム、若者チームで活動。<br>
+              様々なイベントに合わせて演目、人数、構成を変え演奏します。<br>
               持ち曲は全て独自で作曲、振り付け、曲の変化を楽しむ創作和太鼓です。<br>
               見てくださる方々の心に響く音を目指し、地域との繋がりを大切に活動の場を広げています。
             </p>
@@ -97,7 +98,7 @@
             <div class="class-grid">
               <div class="class-card">
                 <div class="card-image">
-                  <img src="dist/kids_class.png" alt="子供たちが笑顔で太鼓を叩いている様子" loading="lazy">
+                  <img src="public/saturday.jpg" alt="子供たちが笑顔で太鼓を叩いている様子" loading="lazy">
                 </div>
                 <div class="card-content">
                   <h3><a href="class.html#kids">万九龍</a></h3>
@@ -106,7 +107,7 @@
               </div>
               <div class="class-card">
                 <div class="card-image">
-                  <img src="dist/hero_bg.png" alt="力強い太鼓の演奏" loading="lazy">
+                  <img src="public/maikatyou2.jpg" alt="華やかな和太鼓の演奏" loading="lazy">
                 </div>
                 <div class="card-content">
                   <h3><a href="class.html#general">舞華蝶</a></h3>
@@ -115,10 +116,10 @@
               </div>
               <div class="class-card">
                 <div class="card-image">
-                  <img src="dist/senior_class.png" alt="シニアの方々が楽しそうに太鼓を叩いている様子" loading="lazy">
+                  <img src="public/to-yasya.jpg" alt="若者チーム" loading="lazy">
                 </div>
                 <div class="card-content">
-                  <h3><a href="class.html#senior">十夜叉</a></h3>
+                  <h3><a href="class.html#junior">十夜叉</a></h3>
                   <p>武天を代表する若者10人がコンセプト<br>
                     エネルギッシュ、アグレッシブな打ち込みで魅了<br></p>
                 </div>
