--- a/instructors.html
+++ b/instructors.html
@@ -45,11 +45,11 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="class.html">クラス紹介</a></li>
-            <li><a href="workshop.html">ワークショップ</a></li>
             <li><a href="instructors.html" class="active">講師紹介</a></li>
             <li><a href="admission.html">入会案内</a></li>
             <li><a href="schedule.html">公演予定</a></li>
             <li><a href="performances.html">公演実績</a></li>
+            <li><a href="workshop.html">ワークショップ</a></li>
             <li><a href="access.html">アクセス</a></li>
             <li><a href="contact.html">お問い合わせ</a></li>
           </ul>
@@ -69,7 +69,7 @@
             <!-- Main Instructor -->
             <div class="instructor-main-card">
               <div class="instructor-image">
-                <img src="./instructor_main.png" alt="代表講師">
+                <img src="public/kiyomi.jpg" alt="代表講師">
               </div>
               <div class="instructor-content">
                 <h2>指導者 <span class="name">栗原 清美</span></h2>
@@ -87,9 +87,9 @@
             <h3 class="section-title">指導員紹介</h3>
             <div class="instructor-grid"> <!-- Removed voice-grid class -->
               <!-- Assistant 1 -->
-              <div class="class-card instructor-card">
-                <div class="card-image instructor-card-image">
-                  <img src="public/m_kurihara.jpg" alt="指導員 栗原">
+              <div class="instructor-card">
+                <div class="instructor-card-image masamune">
+                  <img src="public/masamune.jpg" alt="指導員 栗原">
                 </div>
                 <div class="card-content">
                   <h3>栗原 政宗</h3>
@@ -98,8 +98,8 @@
                 </div>
               </div>
               <!-- Assistant 2 -->
-              <div class="class-card instructor-card">
-                <div class="card-image instructor-card-image">
+              <div class="instructor-card">
+                <div class="instructor-card-image ayaka">
                   <img src="public/a_mimura.jpg" alt="指導員 美村">
                 </div>
                 <div class="card-content">
@@ -109,8 +109,8 @@
                 </div>
               </div>
               <!-- Assistant 3 -->
-              <div class="class-card instructor-card">
-                <div class="card-image instructor-card-image">
+              <div class="instructor-card">
+                <div class="instructor-card-image ryota">
                   <img src="public/r_mimura.jpg" alt="指導員 美村">
                 </div>
                 <div class="card-content">
@@ -120,8 +120,8 @@
                 </div>
               </div>
               <!-- Assistant 4 -->
-              <div class="class-card instructor-card">
-                <div class="card-image instructor-card-image">
+              <div class="instructor-card">
+                <div class="instructor-card-image">
                   <img src="public/kawakubo.jpg" alt="指導員 川久保">
                 </div>
                 <div class="card-content">
