--- a/workshop.html
+++ b/workshop.html
@@ -45,11 +45,11 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="class.html">クラス紹介</a></li>
-            <li><a href="workshop.html" class="active">ワークショップ</a></li>
             <li><a href="instructors.html">講師紹介</a></li>
             <li><a href="admission.html">入会案内</a></li>
             <li><a href="schedule.html">公演予定</a></li>
             <li><a href="performances.html">公演実績</a></li>
+            <li><a href="workshop.html" class="active">ワークショップ</a></li>
             <li><a href="access.html">アクセス</a></li>
             <li><a href="contact.html">お問い合わせ</a></li>
           </ul>
@@ -88,7 +88,7 @@
           <div class="container">
             <div class="detail-card">
               <div class="detail-image">
-                <img src="dist/kids_class.png" alt="ワークショップの様子">
+                <img src="public/workshop.jpg" alt="ワークショップの様子">
               </div>
               <div class="detail-content">
                 <h3>こんな方におすすめ</h3>
