--- a/class.html
+++ b/class.html
@@ -97,9 +97,8 @@
                 <h2>舞華蝶</h2>
                 <span class="tag">対象：</span>
                 <p class="description">
-                  和太鼓の基礎から応用までを学びます。
-                  全身を使って叩く爽快感はストレス発散にも最適です。
-                  年に数回の地域のイベントや発表会に向けた曲の練習も行います。(サンプル文)
+                  基礎からしっかりと積み上げ、ただ叩くだけではない「魅せる和太鼓」を追求しています。<br>
+                  一人ひとりの個性と音色を大切にしながら、全員の呼吸を合わせて一つの音楽を創り上げる楽しさは格別です。<br>美しくしなやかなバチさばきと、心に響くハーモニーで、観る人を魅了する華やかな舞台を創り上げましょう。(サンプル文)
                 </p>
                 <div class="class-info">
                   <dl>
@@ -121,9 +120,9 @@
                 <h2>十夜叉</h2>
                 <span class="tag">対象：</span>
                 <p class="description">
-                  無理のない動きで、楽しく体を動かすことを目的としたクラスです。
-                  脳トレの要素も取り入れたリズム遊びや、ストレッチを中心に行います。
-                  同世代の仲間との交流の場としても好評です。(サンプル文)
+                  指導者が長年培ってきた「和太鼓の可能性を追求する精神」を受け継ぐ、武天の次世代リーダーたちです。<br>
+                  伝統を重んじつつも、既存の枠にとらわれないアグレッシブなパフォーマンスが持ち味。<br>
+                  互いに切磋琢磨し、高みを目指して技術と表現を磨き続ける、熱い情熱を持ったメンバーが集まっています。(サンプル文)
                 </p>
                 <div class="class-info">
                   <dl>
