--- a/access.html
+++ b/access.html
@@ -57,7 +57,7 @@
       </header>
 
       <main>
-        <section class="page-header" style="background-image: url('dist/hero_bg.png');">
+        <section class="page-header" style="background-image: url('public/access/access_header.jpg');">
           <div class="header-overlay"></div>
           <h1>アクセス</h1>
           <p>Access</p>
