--- a/admission.html
+++ b/admission.html
@@ -57,7 +57,7 @@
       </header>
 
       <main>
-        <section class="page-header" style="background-image: url('dist/hero_bg.png');">
+        <section class="page-header" style="background-image: url('public/admission/admission_header.jpg');">
           <div class="header-overlay"></div>
           <h1>入会案内</h1>
           <p>Admission</p>
@@ -109,7 +109,7 @@
               <h2 class="section-title">体験レッスンについて</h2>
               <dl class="trial-details">
                 <dt>体験料</dt>
-                <dd class="price">1回 2000円 <br><span class="note"></span>
+                <dd class="price">1回 500円/30分 <br><span class="note"></span>
                 </dd>
 
                 <dt>開催日時</dt>
