--- a/class.html
+++ b/class.html
@@ -57,7 +57,7 @@
       </header>
 
       <main>
-        <section class="page-header" style="background-image: url('dist/hero_bg.png');">
+        <section class="page-header" style="background-image: url('public/class/class_header.jpg');">
           <div class="header-overlay"></div>
           <h1>クラス紹介</h1>
           <p>Class</p>
@@ -69,10 +69,10 @@
             <!-- Kids Class -->
             <div class="class-detail-card" id="kids">
               <div class="detail-image">
-                <img src="public/saturday.jpg" alt="キッズクラス" loading="lazy">
+                <img src="public/class/saturday.jpg" alt="キッズクラス" loading="lazy">
               </div>
               <div class="detail-content">
-                <h2>万九龍</h2>
+                <h2><ruby>万九龍<rt>Bankuryu</rt></ruby></h2>
                 <span class="tag">対象：小学生〜中学生</span>
                 <p class="description">
                   「仲間や家族と奏でる喜び」を大切に、リズム・メロディ・ハーモニーを身体全体で感じるクラスです。明るく活発な子供たちの個性を引き出しながら、礼儀や協調性といった豊かな心も育みます。親子や兄弟で一緒に汗を流し、太鼓を通じて生まれる家族の絆を深めてみませんか？(サンプル文)
@@ -91,10 +91,10 @@
             <!-- General Class -->
             <div class="class-detail-card" id="general">
               <div class="detail-image">
-                <img src="public/maikatyou.jpg" alt="大人チーム" loading="lazy">
+                <img src="public/class/maikatyou.jpg" alt="大人チーム" loading="lazy">
               </div>
               <div class="detail-content">
-                <h2>舞華蝶</h2>
+                <h2><ruby>舞華蝶<rt>Maikacho</rt></ruby></h2>
                 <span class="tag">対象：</span>
                 <p class="description">
                   基礎からしっかりと積み上げ、ただ叩くだけではない「魅せる和太鼓」を追求しています。<br>
@@ -114,10 +114,10 @@
             <!-- Senior Class -->
             <div class="class-detail-card" id="junior">
               <div class="detail-image">
-                <img src="public/to-yasya.jpg" alt="若者チーム" loading="lazy">
+                <img src="public/class/toyasya.jpg" alt="若者チーム" loading="lazy">
               </div>
               <div class="detail-content">
-                <h2>十夜叉</h2>
+                <h2><ruby>十夜叉<rt>Toyasha</rt></ruby></h2>
                 <span class="tag">対象：</span>
                 <p class="description">
                   指導者が長年培ってきた「和太鼓の可能性を追求する精神」を受け継ぐ、武天の次世代リーダーたちです。<br>
