--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
       </header>
 
       <main>
-        <section class="page-header" style="background-image: url('dist/hero_bg.png');">
+        <section class="page-header" style="background-image: url('public/contact/contact_header.jpg');">
           <div class="header-overlay"></div>
           <h1>お問い合わせ</h1>
           <p>Contact</p>
