--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="app">
       <header class="site-header">
         <div class="logo">
-          <img src="dist/logo_text.png">
+          <img src="public/home/logo_text.png">
         </div>
         <button class="menu-toggle" aria-label="メニューを開く" aria-expanded="false">
           <span class="bar"></span>
@@ -59,6 +59,7 @@
         <section id="hero" class="hero">
           <div class="hero-slides">
             <div class="slide active" style="background-image: url('dist/slideshow/slideshow1.jpg')"></div>
+            <div class="slide" style="background-image: url('public/slideshow/slideshow2.jpg')"></div>
             <div class="slide" style="background-image: url('dist/slideshow/slideshow3.jpeg')"></div>
             <div class="slide" style="background-image: url('dist/slideshow/slideshow4.jpg')"></div>
             <div class="slide" style="background-image: url('dist/slideshow/slideshow5.jpg')"></div>
@@ -98,28 +99,28 @@
             <div class="class-grid">
               <div class="class-card">
                 <div class="card-image">
-                  <img src="public/saturday.jpg" alt="子供たちが笑顔で太鼓を叩いている様子" loading="lazy">
+                  <img src="public/home/saturday.jpg" alt="子供たちが笑顔で太鼓を叩いている様子" loading="lazy">
                 </div>
                 <div class="card-content">
-                  <h3><a href="class.html#kids">万九龍</a></h3>
+                  <h3><a href="class.html#kids"><ruby>万九龍<rt>Bankuryu</rt></ruby></a></h3>
                   <p>元気いっぱいかわいい子供たちが活躍する親子チーム<br>明るく活発な兄弟・親子で楽しむ太鼓で幸せになろう</p>
                 </div>
               </div>
               <div class="class-card">
                 <div class="card-image">
-                  <img src="public/maikatyou2.jpg" alt="華やかな和太鼓の演奏" loading="lazy">
+                  <img src="public/home/maikacho2.jpg" alt="華やかな和太鼓の演奏" loading="lazy">
                 </div>
                 <div class="card-content">
-                  <h3><a href="class.html#general">舞華蝶</a></h3>
+                  <h3><a href="class.html#general"><ruby>舞華蝶<rt>Maikacho</rt></ruby></a></h3>
                   <p>優雅に華やかな演奏を目指す大人チーム<br>女性が多いのが特徴</p>
                 </div>
               </div>
               <div class="class-card">
                 <div class="card-image">
-                  <img src="public/to-yasya.jpg" alt="若者チーム" loading="lazy">
+                  <img src="public/home/to-yasya.jpg" alt="若者チーム" loading="lazy">
                 </div>
                 <div class="card-content">
-                  <h3><a href="class.html#junior">十夜叉</a></h3>
+                  <h3><a href="class.html#junior"><ruby>十夜叉<rt>Toyasha</rt></ruby></a></h3>
                   <p>武天を代表する若者10人がコンセプト<br>
                     エネルギッシュ、アグレッシブな打ち込みで魅了<br></p>
                 </div>
