--- a/instructors.html
+++ b/instructors.html
@@ -57,7 +57,7 @@
       </header>
 
       <main>
-        <section class="page-header" style="background-image: url('dist/hero_bg.png');">
+        <section class="page-header" style="background-image: url('public/instructors/instructor_header.jpg');">
           <div class="header-overlay"></div>
           <h1>講師紹介</h1>
           <p>Instructors</p>
@@ -69,7 +69,7 @@
             <!-- Main Instructor -->
             <div class="instructor-main-card">
               <div class="instructor-image">
-                <img src="public/kiyomi.jpg" alt="代表講師">
+                <img src="public/instructors/kiyomi.jpg" alt="代表講師">
               </div>
               <div class="instructor-content">
                 <h2>指導者 <span class="name">栗原 清美</span></h2>
@@ -89,7 +89,7 @@
               <!-- Assistant 1 -->
               <div class="instructor-card">
                 <div class="instructor-card-image masamune">
-                  <img src="public/masamune.jpg" alt="指導員 栗原">
+                  <img src="public/instructors/masamune.jpg" alt="指導員 栗原">
                 </div>
                 <div class="card-content">
                   <h3>栗原 政宗</h3>
@@ -100,7 +100,7 @@
               <!-- Assistant 2 -->
               <div class="instructor-card">
                 <div class="instructor-card-image ayaka">
-                  <img src="public/a_mimura.jpg" alt="指導員 美村">
+                  <img src="public/instructors/a_mimura.jpg" alt="指導員 美村">
                 </div>
                 <div class="card-content">
                   <h3>美村 綾香</h3>
@@ -111,7 +111,7 @@
               <!-- Assistant 3 -->
               <div class="instructor-card">
                 <div class="instructor-card-image ryota">
-                  <img src="public/r_mimura.jpg" alt="指導員 美村">
+                  <img src="public/instructors/r_mimura.jpg" alt="指導員 美村">
                 </div>
                 <div class="card-content">
                   <h3>美村 涼太</h3>
@@ -122,7 +122,7 @@
               <!-- Assistant 4 -->
               <div class="instructor-card">
                 <div class="instructor-card-image">
-                  <img src="public/kawakubo.jpg" alt="指導員 川久保">
+                  <img src="public/instructors/kawakubo.jpg" alt="指導員 川久保">
                 </div>
                 <div class="card-content">
                   <h3>川久保 諒</h3>
