--- a/performances.html
+++ b/performances.html
@@ -57,7 +57,7 @@
       </header>
 
       <main>
-        <section class="page-header" style="background-image: url('dist/hero_bg_2.png');">
+        <section class="page-header" style="background-image: url('public/performance/performance_header.jpg');">
           <div class="header-overlay"></div>
           <h1>公演実績</h1>
           <p>Performance History</p>
@@ -96,6 +96,9 @@
                     <h3>合同公演「奏音」</h3>
                     <p class="performance-venue">📍 キララホール</p>
                     <p class="performance-desc">野辺囃子神楽保存会との合同公演。ゲストにEriu2&6さんをお招きし、コラボ曲も披露しました。</p>
+                    <div class="flyer-image">
+                      <img src="public/performance/kanade.jpg" alt="合同公演 奏音 チラシ">
+                    </div>
                   </div>
                 </article>
 
@@ -176,18 +179,6 @@
                     <p class="performance-desc">全クラス参加の年次発表会。新曲も初披露しました。</p>
                   </div>
                 </article>
-
-                <article class="performance-card">
-                  <div class="performance-date">
-                    <span class="month">1月</span>
-                    <span class="day">1</span>
-                  </div>
-                  <div class="performance-content">
-                    <h3>新春奉納演奏</h3>
-                    <p class="performance-venue">📍 地元神社境内</p>
-                    <p class="performance-desc">新年の奉納演奏で地域の皆様と新年をお祝いしました。</p>
-                  </div>
-                </article>
               </div>
             </div>
 
@@ -239,11 +230,7 @@
               <div class="legacy-list">
                 <div class="legacy-item">
                   <span class="legacy-year">2007年〜</span>
-                  <p>和太鼓 武天 結成。あきる野市を中心に活動開始。</p>
-                </div>
-                <div class="legacy-item">
-                  <span class="legacy-year">毎年</span>
-                  <p>新春奉納演奏（地元神社）</p>
+                  <p>和太鼓 武天 結成。青梅市・あきる野市を中心に活動開始。</p>
                 </div>
                 <div class="legacy-item">
                   <span class="legacy-year">毎年</span>
