--- a/workshop.html
+++ b/workshop.html
@@ -57,7 +57,7 @@
       </header>
 
       <main>
-        <section class="page-header" style="background-image: url('dist/hero_bg.png');">
+        <section class="page-header" style="background-image: url('public/workshop/workshop_header.jpg');">
           <div class="header-overlay"></div>
           <h1>ワークショップ</h1>
           <p>One-Day Workshop</p>
@@ -88,7 +88,7 @@
           <div class="container">
             <div class="detail-card">
               <div class="detail-image">
-                <img src="public/workshop.jpg" alt="ワークショップの様子">
+                <img src="public/workshop/workshop2.jpg" alt="ワークショップの様子">
               </div>
               <div class="detail-content">
                 <h3>こんな方におすすめ</h3>
