--- a/schedule.html
+++ b/schedule.html
@@ -57,7 +57,7 @@
       </header>
 
       <main>
-        <section class="page-header" style="background-image: url('dist/hero_bg_2.png');">
+        <section class="page-header" style="background-image: url('public/schedule/schedule_header.jpg');">
           <div class="header-overlay"></div>
           <h1>公演予定</h1>
           <p>Schedule</p>
@@ -86,6 +86,9 @@
                   <p class="schedule-desc">
                     武天の発表会です
                   </p>
+                  <div class="flyer-image">
+                    <img src="https://placehold.co/600x800?text=Flyer+Image" alt="武天 発表会 チラシ">
+                  </div>
                   <a href="contact.html?subject=performance" class="ticket-btn">チケット予約について</a>
                 </div>
               </article>
