--- a/performances.html
+++ b/performances.html
@@ -116,13 +116,13 @@
 
                 <article class="performance-card">
                   <div class="performance-date">
-                    <span class="month">1月</span>
+                    <span class="month">6月</span>
                     <span class="day">1</span>
                   </div>
                   <div class="performance-content">
-                    <h3>新春奉納演奏</h3>
-                    <p class="performance-venue">📍 地元神社境内</p>
-                    <p class="performance-desc">新年の幕開けを祝う奉納演奏を行いました。</p>
+                    <h3>第一回三芳太鼓フェスティバル「つなぐ」</h3>
+                    <p class="performance-venue">📍 コピスみよし</p>
+                    <p class="performance-desc">和太鼓を披露しました。</p>
                   </div>
                 </article>
               </div>
@@ -134,13 +134,13 @@
               <div class="performance-grid">
                 <article class="performance-card">
                   <div class="performance-date">
-                    <span class="month">11月</span>
-                    <span class="day">23</span>
+                    <span class="month">12月</span>
+                    <span class="day">15</span>
                   </div>
                   <div class="performance-content">
-                    <h3>秋川流域文化祭</h3>
-                    <p class="performance-venue">📍 あきる野市民会館</p>
-                    <p class="performance-desc">地域の文化祭に出演。多くの方にご来場いただきました。</p>
+                    <h3>武天 発表会</h3>
+                    <p class="performance-venue">📍 ふれあいホール</p>
+                    <p class="performance-desc">全クラス参加の年次発表会。新曲も披露しました。</p>
                   </div>
                 </article>
 
@@ -158,25 +158,25 @@
 
                 <article class="performance-card">
                   <div class="performance-date">
-                    <span class="month">5月</span>
-                    <span class="day">5</span>
+                    <span class="month">7月</span>
+                    <span class="day">7</span>
                   </div>
                   <div class="performance-content">
-                    <h3>こどもの日イベント</h3>
-                    <p class="performance-venue">📍 秋川ふれあいセンター</p>
-                    <p class="performance-desc">子供達が元気いっぱいに演奏を披露しました。</p>
+                    <h3>花まつりおと祭</h3>
+                    <p class="performance-venue">📍 深沢自然人村</p>
+                    <p class="performance-desc">和太鼓を披露しました。</p>
                   </div>
                 </article>
 
                 <article class="performance-card">
                   <div class="performance-date">
-                    <span class="month">4月</span>
-                    <span class="day">7</span>
+                    <span class="month">3月</span>
+                    <span class="day">31</span>
                   </div>
                   <div class="performance-content">
-                    <h3>武天 発表会</h3>
-                    <p class="performance-venue">📍 ふれあいホール</p>
-                    <p class="performance-desc">全クラス参加の年次発表会。新曲も初披露しました。</p>
+                    <h3>HUグループ さくら祭り</h3>
+                    <p class="performance-venue">📍 HUグループ</p>
+                    <p class="performance-desc">さくら祭りで和太鼓を演奏しました。</p>
                   </div>
                 </article>
               </div>
@@ -188,37 +188,37 @@
               <div class="performance-grid">
                 <article class="performance-card">
                   <div class="performance-date">
-                    <span class="month">10月</span>
-                    <span class="day">15</span>
+                    <span class="month">12月</span>
+                    <span class="day">17</span>
                   </div>
                   <div class="performance-content">
-                    <h3>あきる野市民祭</h3>
-                    <p class="performance-venue">📍 あきる野市民ホール</p>
-                    <p class="performance-desc">市民祭のメインステージで演奏させていただきました。</p>
+                    <h3>武天 発表会</h3>
+                    <p class="performance-venue">📍 ふれあいホール</p>
+                    <p class="performance-desc">全クラス参加の年次発表会。新曲も初披露しました。</p>
                   </div>
                 </article>
 
                 <article class="performance-card">
                   <div class="performance-date">
                     <span class="month">8月</span>
-                    <span class="day">12</span>
+                    <span class="day">5</span>
                   </div>
                   <div class="performance-content">
-                    <h3>納涼盆踊り大会</h3>
-                    <p class="performance-venue">📍 市内公園</p>
-                    <p class="performance-desc">盆踊りのオープニングを太鼓演奏で盛り上げました。</p>
+                    <h3>あきる野市夏祭り</h3>
+                    <p class="performance-venue">📍 秋川駅前通り</p>
+                    <p class="performance-desc">夏まつりを太鼓演奏で盛り上げました。</p>
                   </div>
                 </article>
 
                 <article class="performance-card">
                   <div class="performance-date">
-                    <span class="month">4月</span>
-                    <span class="day">9</span>
+                    <span class="month">7月</span>
+                    <span class="day">23</span>
                   </div>
                   <div class="performance-content">
-                    <h3>武天 発表会</h3>
-                    <p class="performance-venue">📍 ふれあいホール</p>
-                    <p class="performance-desc">コロナ禍を乗り越え、久しぶりの大規模発表会を開催しました。</p>
+                    <h3>太鼓祭り 第五回関東大会</h3>
+                    <p class="performance-venue">📍 相模原市民会館ホール</p>
+                    <p class="performance-desc">第五回関東大会に出演。多くの方々にご来場いただきました。</p>
                   </div>
                 </article>
               </div>
