クラス紹介文修正

--- a/class.html
+++ b/class.html
@@ -73,9 +73,11 @@
               </div>
               <div class="detail-content">
                 <h2><ruby>万九龍<rt>Bankuryu</rt></ruby></h2>
-                <span class="tag">対象：小学生〜中学生</span>
+                <span class="tag">対象：小学生以上</span>
                 <p class="description">
-                  「仲間や家族と奏でる喜び」を大切に、リズム・メロディ・ハーモニーを身体全体で感じるクラスです。明るく活発な子供たちの個性を引き出しながら、礼儀や協調性といった豊かな心も育みます。親子や兄弟で一緒に汗を流し、太鼓を通じて生まれる家族の絆を深めてみませんか？(サンプル文)
+                  「仲間や家族と奏でる喜び」を大切に、リズム・メロディ・ハーモニーを身体全体で感じる親子クラスです。<br>
+                  明るく活発な子供たちの個性を引き出しながら、礼儀や協調性といった豊かな心も育みます。<br>
+                  親子や兄弟で一緒に汗を流し、太鼓を通じて生まれる家族の絆を深めてみませんか？(サンプル文)
                 </p>
                 <div class="class-info">
                   <dl>
@@ -95,7 +97,7 @@
               </div>
               <div class="detail-content">
                 <h2><ruby>舞華蝶<rt>Maikacho</rt></ruby></h2>
-                <span class="tag">対象：</span>
+                <span class="tag">対象：大人</span>
                 <p class="description">
                   基礎からしっかりと積み上げ、ただ叩くだけではない「魅せる和太鼓」を追求しています。<br>
                   一人ひとりの個性と音色を大切にしながら、全員の呼吸を合わせて一つの音楽を創り上げる楽しさは格別です。<br>美しくしなやかなバチさばきと、心に響くハーモニーで、観る人を魅了する華やかな舞台を創り上げましょう。(サンプル文)
@@ -118,7 +120,7 @@
               </div>
               <div class="detail-content">
                 <h2><ruby>十夜叉<rt>Toyasha</rt></ruby></h2>
-                <span class="tag">対象：</span>
+                <span class="tag">対象：高校生以上</span>
                 <p class="description">
                   指導者が長年培ってきた「和太鼓の可能性を追求する精神」を受け継ぐ、武天の次世代リーダーたちです。<br>
                   伝統を重んじつつも、既存の枠にとらわれないアグレッシブなパフォーマンスが持ち味。<br>
